crates/cardigan/src/snapshots/cardigan__config__tests__required_only_applies_defaults.snap
---
source: crates/cardigan/src/config.rs
expression: config
---
Config {
    icloud: EndpointConfig {
        url: "https://contacts.icloud.com",
        username: "jane@icloud.com",
        password: Secret([REDACTED]),
    },
    fastmail: EndpointConfig {
        url: "https://carddav.fastmail.com",
        username: "jane@fastmail.com",
        password: Secret([REDACTED]),
    },
    poll_interval: 120s,
    database_path: "/var/lib/cardigan",
    conflict_winner: ICloud,
}
